refactor: fix reflective instantiation in XmlPolicyParser and VerifierFactory
Replace Class#newInstance() with getDeclaredConstructor().newInstance():
- XmlPolicyParser: accessController, passwordDigester, passwordChecker
- VerifierFactory: fallbackConstruct method

Validated Jetty/websocket runtime:
- groovity-servlet-container uses Jetty 9.4.56 (Java 17 compatible)
- javax-websocket-server-impl provided by Jetty
- Ws.java has no deprecated reflection patterns

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>